# ropods-zephyr

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  Kconfig  LICENSE  PACKED_ACCURACY_IMPLEMENTATION.md  README.md  SENSOR_ENABLE_CHANGES.md  SENSOR_ENABLE_RESTRICTION.md  west.yml
boards/ropods/ppod_v2p0/: CMakeLists.txt  Kconfig  Kconfig.ppod_v2p0  README.md  board.c  board.yml  ppod_v2p0-pinctrl.dtsi  ppod_v2p0.dts  ppod_v2p0_defconfig  ppod_v2p0_defs.h  ppod_v2p0_utils.c  ppod_v2p0_utils.h
drivers/: CMakeLists.txt
drivers/sensor/: CMakeLists.txt  Kconfig
drivers/sensor/icm20948/: CMakeLists.txt  ICM20948_SELF_TEST_USAGE.md  IMPLEMENTATION_SUMMARY.md  Kconfig  icm20948.c  (+7 more)
lib/: CMakeLists.txt
lib/include/: sensor_common.h
lib/src/: CMakeLists.txt  Kconfig  ropods_ble_service.c  ropods_ble_service.h  sensor_manager.c  sensor_manager.h
samples/icm20948/: CMakeLists.txt  README.md  prj.conf  sample.yaml
samples/icm20948/boards/: generic.overlay
samples/icm20948/src/: accuracy_demo.c  data_length_demo.c  interrupt_control_demo.c  main.c  packed_accuracy_demo.c  quaternion_accuracy_demo.c  quaternion_demo.c  self_test_demo.c  self_test_simple.c  sensor_enable_demo.c  simple_data_length_test.c  simple_test.c
samples/sensor_manager_sample/: CMakeLists.txt  README.md  prj.conf  sample.yaml
samples/sensor_manager_sample/boards/: nrf52840dk_nrf52840.overlay  nrf52dk_nrf52832.overlay  ppod_v2p0.conf  stm32f4_disco.overlay
samples/sensor_manager_sample/src/: ble_sensor_service.c  ble_sensor_service.h  main.c
zephyr/: module.yml
(+16 files in other folders)
